debathena-lightdm-config (1.4) unstable; urgency=low

  * Be clearer about what a DBus error probably means when initiating a
    restart/shutdown from lightdm
  * Support basic accessibility options (read: a High Contrast Theme)
  * Drop a separate panel window and actually implement a real menubar on
    the background window for the top "panel"

 -- Jonathan Reed <jdreed@mit.edu>  Tue, 10 Jul 2012 17:34:21 -0400

debathena-lightdm-config (1.3) unstable; urgency=low

  * Switch to config-package-dev instead of trying to place nice with what
    the user has installed, because we need to clobber some additional
    lightdm.conf settings; remove now-unused debconf templates
  * Set user-authority-in-system-dir=true in lightdm.conf (Trac: #1161)
  * Ship a session setup and cleanup script, which source some run-parts
    directories

 -- Jonathan Reed <jdreed@mit.edu>  Mon, 02 Jul 2012 11:40:55 -0400

debathena-lightdm-config (1.2) unstable; urgency=low

  * Support kiosk browsing
  * Explicitly set the text and id columns of the ComboBox to work around
    GtkBuilder bugs
  * The greeter needs to keep track of whether the user hit Cancel or not
    in LightDM 1.0 (oneiric)
  * It's GLib.GError, not Glib.Gerror

 -- Jonathan Reed <jdreed@mit.edu>  Tue, 05 Jun 2012 16:39:17 -0400

debathena-lightdm-config (1.1) unstable; urgency=low

  * Scale the background, since most displays are not 2560x1600
  * Bump the scaling factor on the owl, the previous values were when we
    were in an additional window and could obscure the greeter
  * Disallow logins when we're taking an update
  * Explain how to type a username correctly
  * The show-message callback takes 3 args, not 2.

 -- Jonathan Reed <jdreed@mit.edu>  Fri, 01 Jun 2012 11:32:08 -0400

debathena-lightdm-config (1.0) unstable; urgency=low

  * Initial release.

 -- Jonathan Reed <jdreed@mit.edu>  Mon, 07 May 2012 17:28:16 -0400