@@ -1,5 +1,5 @@
 [Desktop Entry]
 Name=Debathena Greeter
 Comment=Debathena greeter for LightDM
-Exec=debathena-lightdm-greeter
+Exec=/usr/lib/debathena-lightdm-config/debathena-lightdm-greeter
 Type=Application
