@@ -1,0 +1,24 @@
+# Config file for debathena-lightdm-greeter
+# Any invalid values will be overridden with compile-time defaults
+[Greeter]
+# Minimum uid required to log in (integer)
+minimum_uid=1
+# File whose presence determines that logins should be disabled
+nologin_file=/var/run/athena-nologin
+# Background Image
+# Must be in a format supported by gdk_pixbuf_new_from_file()
+# Will be scaled to the background size using bilinear interpolation
+background_image=/usr/share/debathena-lightdm-config/background.jpg
+# Logo frames are constructed from the base file, and
+# extra_logo_frames additional files.  Additional filenames are
+# constructed by adding an integer (1..extra_logo_frames) to the end
+# of the base portion of the filename.  Extensions, if any, are
+# stripped off before adding the integer.
+# e.g. debathena.png, debathena1.png, debathena2.png, etc
+base_logo_file=/usr/share/debathena-lightdm-config/debathena.png
+extra_logo_frames=8
+# A MOTD file to display at the bottom of the greeter
+# Will be truncated to 10 lines, 80 characters per line
+motd_filename=/afs/athena.mit.edu/system/config/motd/login.94
+# Do you require your time to be measured in seconds? (boolean)
+time_pedantry=true
